--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/domengabrovsek/coding-exercises/issues"
   },
-  "homepage": "https://github.com/domengabrovsek/coding-exercises#readme"
+  "homepage": "https://github.com/domengabrovsek/coding-exercises#readme",
+  "dependencies": {
+    "jest": "^27.2.4"
+  }
 }
