--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "husky": "^7.0.2"
   }
 }
