--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/domengabrovsek/coding-exercises#readme",
   "dependencies": {
-    "jest": "^27.2.4"
+    "jest": "^27.2.4",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "eslint": "^8.0.1",
